--- a/src/views/MenuBar.fxml
+++ b/src/views/MenuBar.fxml
@@ -4,33 +4,32 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ToolBar?>
-<?import javafx.scene.layout.*?>
-<HBox prefWidth="800.0" BorderPane.alignment="CENTER"
-      xmlns="http://javafx.com/javafx/8"
-      xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="controllers.MenuBarController">
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+
+<HBox alignment="TOP_CENTER" prefHeight="28.0" prefWidth="800.0" BorderPane.alignment="CENTER" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MenuBarController">
     <children>
         <ToolBar prefHeight="40.0" HBox.hgrow="ALWAYS">
             <items>
-                <Button mnemonicParsing="false" prefWidth="300"
-                        text="%menuBarSaveButton"
-                        visible="false"/>
-                <StackPane prefHeight="28.0" prefWidth="200.0">
+            <StackPane prefWidth="265.0">
+               <children>
+                      <Button mnemonicParsing="false" text="%menuBarListButton" StackPane.alignment="TOP_LEFT" />
+               </children>
+            </StackPane>
+                <StackPane prefHeight="31.0" prefWidth="270.0">
                     <children>
-                        <Label text="%toolBarText" textFill="#5b1818"/>
+                        <Label text="%toolBarText" textFill="#5b1818" />
                     </children>
                 </StackPane>
-                <StackPane alignment="CENTER_RIGHT" layoutX="73.0"
-                           layoutY="10.0" prefHeight="28.0" prefWidth="300">
-                    <children>
-                        <Button mnemonicParsing="false"
-                                onAction="#menuBarButton"
-                                text="%menuBarSaveButton"/>
-                    </children>
+                <StackPane alignment="CENTER_LEFT" layoutX="73.0" layoutY="10.0" prefWidth="244.0">
+               <children>
+                        <Button mnemonicParsing="false" onAction="#menuBarButton" text="%menuBarSaveButton" />
+               </children>
                 </StackPane>
             </items>
             <HBox.margin>
-                <Insets bottom="20.0"/>
+                <Insets bottom="20.0" />
             </HBox.margin>
         </ToolBar>
     </children>
