--- a/src/views/AddMovie.fxml
+++ b/src/views/AddMovie.fxml
@@ -1,64 +1,71 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.TextField?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.addMovieController">
    <children>
       <SplitPane dividerPositions="0.8714859437751004" layoutX="130.0" layoutY="135.0" orientation="VERTICAL" prefHeight="500.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                <children>
-                  <TableView prefHeight="451.0" prefWidth="585.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="213.0" AnchorPane.topAnchor="0.0">
-                    <columns>
-                      <TableColumn prefWidth="75.0" text="C1" />
-                      <TableColumn prefWidth="75.0" text="C2" />
-                    </columns>
-                  </TableView>
-                  <VBox layoutX="585.0" prefHeight="451.0" prefWidth="212.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="585.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="0.0">
+                  <VBox layoutX="403.0" prefHeight="430.0" prefWidth="394.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="403.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="0.0">
                      <children>
-                        <ImageView fitHeight="251.0" fitWidth="214.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="addMovieImage" fitHeight="288.0" fitWidth="216.0" pickOnBounds="true" preserveRatio="true">
                            <VBox.margin>
-                              <Insets />
+                              <Insets bottom="40.0" left="100.0" right="40.0" top="12.0" />
                            </VBox.margin>
                         </ImageView>
-                        <Label text="Label">
+                        <Label fx:id="addMovieDescription" alignment="TOP_LEFT" prefHeight="173.0" prefWidth="210.0" wrapText="true">
                            <padding>
-                              <Insets bottom="20.0" left="10.0" right="10.0" top="20.0" />
-                           </padding>
-                        </Label>
-                        <Label text="Label">
-                           <padding>
-                              <Insets bottom="20.0" left="10.0" right="10.0" top="20.0" />
-                           </padding>
-                        </Label>
-                        <Label text="Label">
-                           <padding>
-                              <Insets bottom="20.0" left="10.0" right="10.0" top="20.0" />
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </padding>
                            <VBox.margin>
-                              <Insets />
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </VBox.margin>
+                           <font>
+                              <Font size="12.0" />
+                           </font>
                         </Label>
                      </children>
                   </VBox>
+                  <TableView fx:id="movieTable" prefHeight="430.0" prefWidth="405.0" tableMenuButtonVisible="true">
+                     <columns>
+                        <TableColumn fx:id="listTableTitle" prefWidth="164.79998779296875" text="%movieTitleString">
+                           <cellValueFactory>
+                              <PropertyValueFactory property="title" />
+                           </cellValueFactory>
+                        </TableColumn>
+                        <TableColumn fx:id="listTableYear" prefWidth="101.59999084472656" text="%movieYearString">
+                           <cellValueFactory>
+                              <PropertyValueFactory property="year" />
+                           </cellValueFactory>
+                        </TableColumn>
+                        <TableColumn fx:id="listTableRatings" minWidth="0.0" prefWidth="131.199951171875" text="%movieRatingString">
+                           <cellValueFactory>
+                              <PropertyValueFactory property="year" />
+                           </cellValueFactory>
+                        </TableColumn>
+                     </columns>
+                  </TableView>
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="63.0" prefWidth="798.0">
                <children>
                   <Label layoutX="32.0" layoutY="21.0" text="Label" />
-                  <TextField layoutX="89.0" layoutY="17.0" prefHeight="26.0" prefWidth="170.0" />
-                  <Button layoutX="288.0" layoutY="7.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="110.0" text="Button" />
-                  <Button layoutX="472.0" layoutY="7.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="298.0" text="Button" />
+                  <TextField fx:id="newMovieInput" layoutX="88.0" layoutY="14.0" prefHeight="26.0" prefWidth="170.0" />
+                  <Button fx:id="searchNewMovie" layoutX="288.0" layoutY="7.0" mnemonicParsing="false" onAction="#searchNewMovie" prefHeight="40.0" prefWidth="110.0" text="%searchMovieButton" />
+                  <Button fx:id="addNewMovie" layoutX="472.0" layoutY="7.0" mnemonicParsing="false" onAction="#addNewMovie" prefHeight="40.0" prefWidth="298.0" text="%addMovieButton" />
                </children>
             </AnchorPane>
         </items>
