--- a/src/views/AddMovie.fxml
+++ b/src/views/AddMovie.fxml
@@ -3,55 +3,95 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.addMovieController">
-   <children>
-      <SplitPane dividerPositions="0.8714859437751004" layoutX="130.0" layoutY="135.0" orientation="VERTICAL" prefHeight="500.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.addMovieController">
+   <bottom>
+      <HBox alignment="CENTER" prefHeight="70.0" prefWidth="200.0" spacing="40.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label prefHeight="30.0" text="%searchMovieLabel">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <TextField fx:id="newMovieInput" prefHeight="30.0" prefWidth="200.0" />
+            <Button fx:id="searchNewMovie" mnemonicParsing="false" onAction="#searchNewMovie" prefHeight="30.0" prefWidth="110.0" text="%searchMovieButton">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Button>
+            <Button fx:id="addNewMovie" mnemonicParsing="false" onAction="#addNewMovie" prefHeight="30.0" prefWidth="200.0" text="%addMovieButton">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Button>
+         </children>
+      </HBox>
+   </bottom>
+   <center>
+      <HBox alignment="CENTER" prefHeight="400.0" prefWidth="800.0" BorderPane.alignment="CENTER">
+         <children>
+            <VBox prefHeight="400.0" prefWidth="400.0">
                <children>
-                  <VBox layoutX="403.0" prefHeight="430.0" prefWidth="394.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="403.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="0.0">
+                  <VBox maxWidth="410.0" prefHeight="80.0" prefWidth="410.0">
                      <children>
-                        <ImageView fx:id="addMovieImage" fitHeight="288.0" fitWidth="216.0" pickOnBounds="true" preserveRatio="true">
-                           <VBox.margin>
-                              <Insets bottom="40.0" left="100.0" right="40.0" top="12.0" />
-                           </VBox.margin>
-                        </ImageView>
-                        <Label fx:id="addMovieDescription" alignment="TOP_LEFT" prefHeight="173.0" prefWidth="210.0" wrapText="true">
-                           <padding>
-                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                           </padding>
-                           <VBox.margin>
-                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                           </VBox.margin>
-                           <font>
-                              <Font size="12.0" />
-                           </font>
-                        </Label>
+                        <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="800.0" spacing="38.0">
+                           <children>
+                              <Label prefWidth="200.0" text="%newListNameLabel">
+                                 <font>
+                                    <Font size="16.0" />
+                                 </font>
+                              </Label>
+                              <TextField>
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </TextField>
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="800.0" spacing="38.0">
+                           <children>
+                              <Label prefWidth="200.0" text="%newListAuthorName">
+                                 <font>
+                                    <Font size="16.0" />
+                                 </font>
+                              </Label>
+                              <TextField>
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </TextField>
+                           </children>
+                        </HBox>
                      </children>
+                     <padding>
+                        <Insets left="20.0" />
+                     </padding>
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
                   </VBox>
-                  <TableView fx:id="movieTable" prefHeight="430.0" prefWidth="405.0" tableMenuButtonVisible="true">
+                  <TableView fx:id="movieTable" prefHeight="420.0" prefWidth="420.0" tableMenuButtonVisible="true">
                      <columns>
-                        <TableColumn fx:id="listTableTitle" prefWidth="164.79998779296875" text="%movieTitleString">
+                        <TableColumn fx:id="listTableTitle" editable="false" prefWidth="189.0" resizable="false" text="%movieTitleString">
                            <cellValueFactory>
                               <PropertyValueFactory property="title" />
                            </cellValueFactory>
                         </TableColumn>
-                        <TableColumn fx:id="listTableYear" prefWidth="101.59999084472656" text="%movieYearString">
+                        <TableColumn fx:id="listTableYear" editable="false" prefWidth="83.0" resizable="false" text="%movieYearString">
                            <cellValueFactory>
                               <PropertyValueFactory property="year" />
                            </cellValueFactory>
                         </TableColumn>
-                        <TableColumn fx:id="listTableRatings" minWidth="0.0" prefWidth="131.199951171875" text="%movieRatingString">
+                        <TableColumn fx:id="listTableRatings" editable="false" minWidth="0.0" prefWidth="93.0" resizable="false" text="%movieRatingString">
                            <cellValueFactory>
                               <PropertyValueFactory property="year" />
                            </cellValueFactory>
@@ -59,16 +99,38 @@
                      </columns>
                   </TableView>
                </children>
-            </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="63.0" prefWidth="798.0">
+               <padding>
+                  <Insets left="10.0" right="10.0" />
+               </padding>
+            </VBox>
+            <VBox alignment="TOP_CENTER" prefWidth="400.0" spacing="10.0">
                <children>
-                  <Label layoutX="32.0" layoutY="21.0" text="Label" />
-                  <TextField fx:id="newMovieInput" layoutX="88.0" layoutY="14.0" prefHeight="26.0" prefWidth="170.0" />
-                  <Button fx:id="searchNewMovie" layoutX="288.0" layoutY="7.0" mnemonicParsing="false" onAction="#searchNewMovie" prefHeight="40.0" prefWidth="110.0" text="%searchMovieButton" />
-                  <Button fx:id="addNewMovie" layoutX="472.0" layoutY="7.0" mnemonicParsing="false" onAction="#addNewMovie" prefHeight="40.0" prefWidth="298.0" text="%addMovieButton" />
+                  <ImageView fx:id="addMovieImage" fitHeight="300.0" fitWidth="280.0" pickOnBounds="true" preserveRatio="true" />
+                  <Label fx:id="addMovieTitle" alignment="CENTER" prefHeight="40.0" prefWidth="340.0" textAlignment="CENTER">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="addMovieDescription" alignment="TOP_LEFT" prefHeight="150.0" prefWidth="340.0" wrapText="true">
+                     <padding>
+                        <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
+                     </padding>
+                     <VBox.margin>
+                        <Insets left="10.0" right="10.0" />
+                     </VBox.margin>
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
                </children>
-            </AnchorPane>
-        </items>
-      </SplitPane>
-   </children>
-</AnchorPane>
+               <padding>
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+               </padding>
+            </VBox>
+         </children>
+         <padding>
+            <Insets bottom="10.0" />
+         </padding>
+      </HBox>
+   </center>
+</BorderPane>
