--- a/src/views/MenuBar.fxml
+++ b/src/views/MenuBar.fxml
@@ -3,32 +3,29 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ToolBar?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Font?>
 
-<HBox alignment="TOP_CENTER" prefHeight="30.0" prefWidth="800.0" BorderPane.alignment="CENTER" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MenuBarController">
-    <children>
-        <ToolBar prefHeight="30.0" HBox.hgrow="ALWAYS">
-            <items>
-                <StackPane prefWidth="265.0">
-               <children>
-                      <Button mnemonicParsing="false" text="%menuBarListButton" StackPane.alignment="TOP_LEFT" />
-               </children>
-            </StackPane>
-                <StackPane prefHeight="30.0" prefWidth="270.0">
-                    <children>
-                        <Label text="%toolBarText" textFill="#5b1818" />
-                    </children>
-                </StackPane>
-                <StackPane alignment="CENTER_LEFT" layoutX="73.0" layoutY="10.0" prefWidth="244.0">
-               <children>
-                        <Button mnemonicParsing="false" onAction="#menuBarButton" text="%menuBarSaveButton" />
-               </children>
-                </StackPane>
-            </items>
 
-        </ToolBar>
-    </children>
+<HBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="800.0" spacing="40.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MenuBarController">
+   <children>
+      <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="220.0" text="%menuBarListButton">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
+      <Label alignment="CENTER" prefHeight="30.0" prefWidth="220.0" text="%toolBarText">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="220.0" text="%menuBarSaveButton">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
+   </children>
+   <padding>
+      <Insets left="30.0" right="30.0" />
+   </padding>
 </HBox>
