--- a/src/views/StartPage.fxml
+++ b/src/views/StartPage.fxml
@@ -3,21 +3,40 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.StartPageController">
-   <children>
-      <VBox layoutX="61.0" layoutY="25.0" prefHeight="262.0" prefWidth="470.0" AnchorPane.bottomAnchor="112.60000000000002" AnchorPane.leftAnchor="64.0" AnchorPane.rightAnchor="64.0" AnchorPane.topAnchor="25.0">
+
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="800.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.StartPageController">
+   <bottom>
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="40.0" BorderPane.alignment="CENTER">
          <children>
-            <Label fx:id="menuTitleString" alignment="CENTER" contentDisplay="CENTER" prefHeight="79.0" prefWidth="374.0" text="%menuTitleString" textAlignment="CENTER">
-               <VBox.margin>
-                  <Insets bottom="50.0" left="50.0" right="50.0" top="50.0" />
-               </VBox.margin>
+            <Button fx:id="menuNewListButton" mnemonicParsing="false" onAction="#menuButtonPressed" prefHeight="30.0" prefWidth="250.0" text="%menuNewListButton">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Button>
+            <Button fx:id="menuViewListButton" mnemonicParsing="false" onAction="#menuButtonPressed" prefHeight="30.0" prefWidth="250.0" text="%menuViewListButton">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Button>
+         </children>
+      </HBox>
+   </bottom>
+   <top>
+      <HBox alignment="TOP_CENTER" prefHeight="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label fx:id="menuTitleString" alignment="CENTER" contentDisplay="CENTER" text="%menuTitleString" textAlignment="CENTER">
+               <font>
+                  <Font size="30.0" />
+               </font>
             </Label>
          </children>
-      </VBox>
-      <Button fx:id="menuNewListButton" layoutX="14.0" layoutY="314.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="275.0" text="%menuNewListButton" />
-      <Button fx:id="menuViewListButton" layoutX="310.0" layoutY="314.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="275.0" text="%menuViewListButton" />
-   </children>
-</AnchorPane>
+         <padding>
+            <Insets top="30.0" />
+         </padding>
+      </HBox>
+   </top>
+</BorderPane>
