--- a/src/views/MovieList.fxml
+++ b/src/views/MovieList.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.control.cell.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -13,7 +19,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MovieListController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MovieListController">
    <center>
       <SplitPane dividerPositions="0.9" orientation="VERTICAL" BorderPane.alignment="CENTER">
         <items>
@@ -63,49 +69,29 @@
       </SplitPane>
    </center>
    <top>
-      <HBox alignment="CENTER" prefHeight="80.0" prefWidth="800.0" spacing="30.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="80.0" prefWidth="800.0" BorderPane.alignment="CENTER">
          <children>
-            <VBox alignment="TOP_CENTER" prefWidth="150.0" spacing="10.0">
+             <fx:include source="MenuBar.fxml"/>
+            <HBox alignment="CENTER" prefHeight="40.0" prefWidth="800.0" spacing="30.0">
                <children>
                   <Label alignment="CENTER" prefWidth="120.0" text="%listNameLabel">
                      <font>
                         <Font size="16.0" />
                      </font>
                   </Label>
-                  <Label fx:id="nameListString" alignment="CENTER" prefWidth="120.0" text="test">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Label>
-               </children>
-               <padding>
-                  <Insets top="10.0" />
-               </padding>
-            </VBox>
-            <VBox alignment="TOP_CENTER" prefWidth="150.0" spacing="10.0">
-               <children>
+                  <TextField />
                   <Label alignment="CENTER" prefWidth="120.0" text="%listAuthorLabel">
                      <font>
                         <Font size="16.0" />
                      </font>
                   </Label>
-                  <Label fx:id="authorListString" alignment="CENTER" prefWidth="120.0" text="test">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Label>
+                  <TextField />
                </children>
                <padding>
-                  <Insets top="10.0" />
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding>
-            </VBox>
+            </HBox>
          </children>
-         <BorderPane.margin>
-            <Insets />
-         </BorderPane.margin>
-         <padding>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-         </padding>
-      </HBox>
+      </VBox>
    </top>
 </BorderPane>
