--- a/src/views/AddMovie.fxml
+++ b/src/views/AddMovie.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.addMovieController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="/css/styles.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.addMovieController">
    <bottom>
       <HBox alignment="CENTER" prefHeight="70.0" prefWidth="200.0" spacing="40.0" BorderPane.alignment="CENTER">
          <children>
@@ -28,7 +28,7 @@
                   <Font size="16.0" />
                </font>
             </Button>
-            <Button fx:id="addNewMovie" mnemonicParsing="false" onAction="#addNewMovie" prefHeight="30.0" prefWidth="200.0" text="%addMovieButton">
+            <Button fx:id="addNewMovie" mnemonicParsing="false" onAction="#addNewMovie" prefHeight="30.0" prefWidth="110.0" text="%addMovieButton">
                <font>
                   <Font size="16.0" />
                </font>
@@ -41,7 +41,7 @@
          <children>
             <VBox prefHeight="400.0" prefWidth="400.0">
                <children>
-                  <TableView fx:id="movieTable" prefHeight="500.0" prefWidth="420.0" tableMenuButtonVisible="true">
+                  <TableView fx:id="movieTable" maxWidth="380.0" prefHeight="500.0" prefWidth="380.0" tableMenuButtonVisible="true">
                      <columns>
                         <TableColumn fx:id="listTableTitle" editable="false" prefWidth="189.0" resizable="false" text="%movieTitleString">
                            <cellValueFactory>
@@ -53,16 +53,16 @@
                               <PropertyValueFactory property="year" />
                            </cellValueFactory>
                         </TableColumn>
-                        <TableColumn fx:id="listTableRatings" editable="false" minWidth="0.0" prefWidth="93.0" resizable="false" text="%movieRatingString">
+                        <TableColumn fx:id="listTableRatings" editable="false" minWidth="0.0" prefWidth="90.0" resizable="false" text="%movieRatingString">
                            <cellValueFactory>
-                              <PropertyValueFactory property="year" />
+                              <PropertyValueFactory property="rating" />
                            </cellValueFactory>
                         </TableColumn>
                      </columns>
                   </TableView>
                </children>
                <padding>
-                  <Insets left="10.0" right="10.0" />
+                  <Insets left="10.0" right="10.0" top="10.0" />
                </padding>
             </VBox>
             <VBox alignment="TOP_CENTER" prefWidth="400.0" spacing="10.0">
@@ -95,5 +95,6 @@
          </padding>
       </HBox>
    </center>
+
 
 </BorderPane>
