--- a/src/views/MovieList.fxml
+++ b/src/views/MovieList.fxml
@@ -6,20 +6,8 @@
 <?import javafx.scene.control.cell.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.cell.PropertyValueFactory?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MovieListController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="/css/styles.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MovieListController">
    <center>
       <SplitPane dividerPositions="0.9" orientation="VERTICAL" BorderPane.alignment="CENTER">
         <items>
@@ -27,12 +15,12 @@
                <children>
                   <TableView fx:id="movieTable" prefHeight="400.0" tableMenuButtonVisible="true">
                      <columns>
-                        <TableColumn fx:id="listTableID" editable="false" maxWidth="52.0" minWidth="52.0" prefWidth="52.0" resizable="false" text="%movieIDString">
+                        <TableColumn fx:id="listTableID" editable="false" maxWidth="52.0" minWidth="43.0" prefWidth="43.0" resizable="false" text="%movieIDString">
                            <cellValueFactory>
                               <PropertyValueFactory property="ID" />
                            </cellValueFactory>
                         </TableColumn>
-                        <TableColumn fx:id="listTableTitle" prefWidth="234.0" text="%movieTitleString">
+                        <TableColumn fx:id="listTableTitle" prefWidth="243.0" text="%movieTitleString">
                            <cellValueFactory>
                               <PropertyValueFactory property="title" />
                            </cellValueFactory>
@@ -42,12 +30,16 @@
                               <PropertyValueFactory property="year" />
                            </cellValueFactory>
                         </TableColumn>
-                        <TableColumn fx:id="listTableScore" prefWidth="74.0" text="%movieRatingString">
+                        <TableColumn fx:id="listTableScore" prefWidth="104.0" text="%movieRatingString">
                            <cellValueFactory>
                               <PropertyValueFactory property="score" />
                            </cellValueFactory>
                         </TableColumn>
-                        <TableColumn fx:id="listTablePoster" prefWidth="340.0" text="%moviePosterString" />
+                        <TableColumn fx:id="listTableMore" prefWidth="310.0" styleClass="clickMoreButton" text="%movieMoreString">
+                           <cellValueFactory>
+                              <PropertyValueFactory property="more" />
+                           </cellValueFactory>
+                       </TableColumn>
                      </columns>
                   </TableView>
                </children>
@@ -58,8 +50,8 @@
             <HBox alignment="CENTER_LEFT" prefHeight="30.0" prefWidth="800.0" spacing="30.0">
                <children>
                   <Label fx:id="listSearchTitle" text="%listSearchTitle" />
-                  <TextField fx:id="listSearchBar" prefHeight="26.0" prefWidth="214.0" />
-                  <Button fx:id="listSearchButton" mnemonicParsing="false" onAction="#searchMovieButton" prefHeight="32.0" prefWidth="104.0" text="%listSearchButton" />
+                  <TextField fx:id="listSearchField" prefHeight="26.0" prefWidth="214.0" />
+                  <Button fx:id="addMovieButton" mnemonicParsing="false" onAction="#addMovieButton" prefWidth="150.0" text="%addMovieButton" />
                </children>
                <padding>
                   <Insets left="50.0" right="50.0" />
@@ -71,7 +63,7 @@
    <top>
       <VBox prefHeight="80.0" prefWidth="800.0" BorderPane.alignment="CENTER">
          <children>
-             <fx:include source="MenuBar.fxml"/>
+             <fx:include source="MenuBar.fxml" />
             <HBox alignment="CENTER" prefHeight="40.0" prefWidth="800.0" spacing="30.0">
                <children>
                   <Label alignment="CENTER" prefWidth="120.0" text="%listNameLabel">
