--- a/src/views/MovieList.fxml
+++ b/src/views/MovieList.fxml
@@ -63,7 +63,28 @@
    <top>
       <VBox prefHeight="80.0" prefWidth="800.0" BorderPane.alignment="CENTER">
          <children>
-             <fx:include source="MenuBar.fxml" />
+            <HBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="800.0" spacing="40.0" styleClass="toolBar" stylesheets="/css/styles.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+               <children>
+                  <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="220.0" text="%menuBarListButton" visible="false">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Button>
+                  <Label alignment="CENTER" prefHeight="30.0" prefWidth="220.0" styleClass="toolBarTitle" text="%menuTitleString">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Button mnemonicParsing="false" onAction="#saveAndQuitButton" prefHeight="30.0" prefWidth="220.0" text="%menuBarSaveButton">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Button>
+               </children>
+               <padding>
+                  <Insets left="30.0" right="30.0" />
+               </padding>
+            </HBox>
             <HBox alignment="CENTER" prefHeight="40.0" prefWidth="800.0" spacing="30.0">
                <children>
                   <Label alignment="CENTER" prefWidth="120.0" text="%listNameLabel">
